--- a/output.css
+++ b/output.css
@@ -13964,11 +13964,6 @@ body {
   background-color: orange;
 }
 
-.peter {
-  background: url("images/logo.png") no-repeat;
-  background-size: contain;
-}
-
 .h-74 {
   height: 20rem;
 }
@@ -13976,8 +13971,6 @@ body {
 .h-86 {
   height: 24rem;
 }
-
-/* END OF SITE STYLES */
 
 .title {
   font-family: 'Monoton', 'cursive';
@@ -13995,6 +13988,13 @@ body {
 
 [v-cloak] {
   display: none;
+}
+
+/* CARD BACKGROUND IMAGES */
+
+.peter {
+  background: url("images/logo.png") no-repeat center;
+  background-size: contain;
 }
 
 @media (min-width: 640px) {
